appId: ${ APP_ID }
---
- launchApp
- assertVisible: "Image Compressor"
- tapOn:
    text: "Run Compression Engine"
- assertVisible: "Compression Analytics"